<resources>
    <string name="app_name">Food Market</string>
    <string name="foodmarket">FoodMarket</string>
    <string name="logo_apps">Logo Apps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_password">Type your password</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="continues">Continue</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="select_your_city">Select your city</string>
    <string name="city">City</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="house_no">House No.</string>
    <string name="type_your_address">Type your address</string>
    <string name="address">Address</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="phone_no">Phone No.</string>
    <string name="image_profile">Image Profile</string>
    <string name="yeay_completed">Yeay! Completed</string>
    <string name="now_you_are_able_to_order_some_foods_as_a_self_reward">Now you are able to order <br>some foods as a self-reward</br></string>
    <string name="find_foods">Find Foods</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="cherry_healty">Cherry Healty</string>
    <string name="logo_item">Logo Item</string>
    <string name="sample_price">Rp. 12.000</string>
</resources>