<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="26dp"
        android:paddingEnd="24dp"
        tools:context=".ui.auth.signin.SignInFragment">

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_phone_number"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_address"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_no" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_house_number"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/select_your_city"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnSignupNow"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>