<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="26dp"
        android:paddingEnd="24dp"
        tools:context=".ui.auth.signin.SignInFragment">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginBottom="26dp"
            android:src="@drawable/ic_picture_empty"
            android:contentDescription="@string/image_profile"/>

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPersonName"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_full_name"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal_16_020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            style="@style/EditText.PoppinsNormal_14sp_8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continues"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>