<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    android:paddingStart="24dp"
    android:paddingTop="26dp"
    android:paddingEnd="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.signin.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsNormal_16_020202"
        android:text="@string/email_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText.PoppinsNormal_14sp_8D92A3"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/type_your_email_address"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsNormal_16_020202"
        android:text="@string/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText.PoppinsNormal_14sp_8D92A3"
        android:inputType="textPassword"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/type_your_password"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Primary"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Secondary"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:background="@drawable/shape_rectangle_8_8d92a3"/>


</LinearLayout>