<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/ivFood"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/iv_sample_product"
        android:contentDescription="@string/logo_item"/>

    <TextView
        android:id="@+id/tvTitleFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsNormal_16_020202"
        android:text="@string/cherry_healty"
        app:layout_constraintStart_toEndOf="@+id/ivFood"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.PoppinsNormal_14_8D92A3"
        android:text="@string/sample_price"
        app:layout_constraintTop_toBottomOf="@id/tvTitleFood"
        app:layout_constraintStart_toEndOf="@id/ivFood"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="12dp" />

    <RatingBar
        android:id="@+id/rbFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>